--- a/Dada.HTML
+++ b/Dada.HTML
@@ -3,28 +3,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kshitiz Aryal</title>
+    <link rel="stylesheet" href="Styles.CSS">
+    <script src="https://kit.fontawesome.com/1a569f51dc.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <nav class="navbar"
-     <div class="navbar__container">
-         <a href="/" id="navbar__logo">NEXT</a>
-         <div class="navbar__toggle" id="mobile-menu"></div>
-         <span class="bar"></span>
-         <span class="bar"></span>
+    <nav class="navbar">
+      <div class="navbar__container">
+         <a href="/" id="navbar__logo"> <i class="fas fa-university"></i> University of Tennessee</a>
+          <div class="navbar__toggle" id="mobile-menu"></div>
+            <span class="bar"></span> <span class="bar"></span>
          <span class="bar"></span>
          
      </div>
       <ul class="navbar__menu">
-          <li class="navbar__item">
-              <a href="/" class="navbar__links">  University</a>
-              
+          <li>
+              <a href="/" class="navbar__links"> Home</a>
           </li>
           <li>
-            <a href="/Tech.html" class="navbar__links">Tech </a>
+            <a href="/Tech.html" class="navbar__links">Projects </a>
           </li>
           <li>
-            <a href="/" class="navbar__links"> Grade</a>
+            <a href="/" class="navbar__links"> Research</a>
           </li>
           <li>
             <a href="/" class="navbar__btn">  More info</a>
@@ -33,5 +34,16 @@
 
       </div> 
     </nav>
+    <!--Hero Section-->
+    <div class="main">
+      <div class="main__container">
+        <h1>Kshitiz Aryal</h1>
+        <h5>-  Prof. of Artificail intilligence</h5>
+      </div>
+        <div class="main__img--container">
+          <img src="images/pic1.svg" alt="pic1" id="main__img">
+        </div>
+      </div>
+    <script src="app.js"></script>
 </body>
 </html>
