--- a/Dada.HTML
+++ b/Dada.HTML
@@ -1,14 +1,20 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kshitiz Aryal</title>
-    <link rel="stylesheet" href="Styles.CSS">
-    <script src="https://kit.fontawesome.com/1a569f51dc.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="Styles.CSS" />
+      <link
+           rel="stylesheet"
+           href="https://use.fontawesome.com/release/v5.14.0/CSS/all.CSS"
+           integrity="sha348-HzLeBuhoNPv5l5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbfc"
+           crossorigin="anonymous"
+          /> 
+          <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet" />
 
-</head>
-<body>
+ </head>
+ <body>
+    <!--Navigation bar-->
     <nav class="navbar">
       <div class="navbar__container">
          <a href="/" id="navbar__logo"> <i class="fas fa-university"></i> University of Tennessee</a>
@@ -38,12 +44,18 @@
     <div class="main">
       <div class="main__container">
         <h1>Kshitiz Aryal</h1>
-        <h5>-  Prof. of Artificail intilligence</h5>
+        <h5>- Prof. of Artificail intilligence</h5>
+        <p>This need to be changed</p>
+        
+         <button class="main__btn"><a
+           href="/">Know More</a></button>
       </div>
         <div class="main__img--container">
-          <img src="images/pic1.svg" alt="pic1" id="main__img">
+          <img src="../Javscript/image/pic1.svg"
+           alt="pic" id="main__img"/>
         </div>
       </div>
+    </div>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
