--- a/Dada.HTML
+++ b/Dada.HTML
@@ -17,7 +17,7 @@
     <!--Navigation bar-->
     <nav class="navbar">
       <div class="navbar__container">
-         <a href="/" id="navbar__logo"> <i class="fas fa-university"></i> University of Tennessee</a>
+         <a href="/" id="navbar__logo"> <i class="fas fa-university"></i>Kshitiz Aryal</a>
           <div class="navbar__toggle" id="mobile-menu"></div>
             <span class="bar"></span> <span class="bar"></span>
          <span class="bar"></span>
@@ -28,34 +28,65 @@
               <a href="/" class="navbar__links"> Home</a>
           </li>
           <li>
-            <a href="/Tech.html" class="navbar__links">Projects </a>
+            <a href="/" class="navbar__links">Projects </a>
           </li>
           <li>
             <a href="/" class="navbar__links"> Research</a>
           </li>
           <li>
-            <a href="/" class="navbar__btn">  More info</a>
+            <a href="/" class="navbar__links">  More info</a>
           </li>
       </ul>
 
       </div> 
     </nav>
-    <!--Hero Section-->
+    <!--Front Page-->
     <div class="main">
       <div class="main__container">
-        <h1>Kshitiz Aryal</h1>
+        <h1>Yesma k rakhnni nai khoji raxu</h1>
         <h5>- Prof. of Artificail intilligence</h5>
         <p>This need to be changed</p>
-        
-         <button class="main__btn"><a
-           href="/">Know More</a></button>
       </div>
         <div class="main__img--container">
           <img src="../Javscript/image/pic1.svg"
            alt="pic" id="main__img"/>
         </div>
       </div>
+      <!--Research Section-->
+       <div class="Research">
+         <h1>My Researchs</h1>
+         <div class="Project__container">
+         <div class="Project__card">
+           <h2>Modern Robotics</h2>
+           <div>AI Powered Technology</div>
+         </div>
+         <div class="Project__card">
+          <h2>Internet of things</h2>
+          <p>Offensive Security</p>
+        </div>
+       </div>
+      </div>
+           <!--project Section-->
+           <di class="Project">
+            <h1>My Projects</h1>
+            <div class="projects_tiles">
+              <div class="project">Project 1</div>
+              <div class="project">Project 2</div>
+              <div class="project">Project 3</div>
+              <div class="project">Project 4</div>
+              <div class="project">Project 5</div>
+              <div class="project">Project 6</div>
+        </div>
+         </div>
+   
+
+       <!--Personnel Info-->
+       <div class="Last-Page">
+        <h1>Let's get in touch</h1>
+        <p>Everything i will write here</p>
+        <button type="button" class="button">Email me!</button>
     </div>
     <script src="app.js"></script>
+
   </body>
 </html>
