--- a/Dada.HTML
+++ b/Dada.HTML
@@ -28,7 +28,7 @@
               <a href="/" class="navbar__links"> Home</a>
           </li>
           <li>
-            <a href="/" class="navbar__links">Projects </a>
+            <a href=".Project" class="navbar__links">Projects </a>
           </li>
           <li>
             <a href="/" class="navbar__links"> Research</a>
@@ -43,15 +43,15 @@
     <!--Front Page-->
     <div class="main">
       <div class="main__container">
-        <h1>Yesma k rakhnni nai khoji raxu</h1>
+        <h1>Kshitiiz Aryal</h1>
         <h5>- Prof. of Artificail intilligence</h5>
         <p>This need to be changed</p>
       </div>
-        <div class="main__img--container">
-          <img src="../Javscript/image/pic1.svg"
-           alt="pic" id="main__img"/>
-        </div>
+        <div class="My_image">
+          <img src="../Javscript/image/Dada.jpg"
+           alt="My image" id="My_img"/>
       </div>
+      
       <!--Research Section-->
        <div class="Research">
          <h1>My Researchs</h1>
@@ -63,11 +63,15 @@
          <div class="Project__card">
           <h2>Internet of things</h2>
           <p>Offensive Security</p>
+          <div class="main__img--container">
+            <img src="../Javscript/image/pic1.svg"
+             alt="pic" id="main__img"/>
+          </div>
         </div>
        </div>
       </div>
            <!--project Section-->
-           <di class="Project">
+           <div class="Project">
             <h1>My Projects</h1>
             <div class="projects_tiles">
               <div class="project">Project 1</div>
@@ -84,7 +88,7 @@
        <div class="Last-Page">
         <h1>Let's get in touch</h1>
         <p>Everything i will write here</p>
-        <button type="button" class="button">Email me!</button>
+        <button type="button" class="last_button">Email me!</button>
     </div>
     <script src="app.js"></script>
 
