Work on progress

--- a/Dada.HTML
+++ b/Dada.HTML
@@ -43,12 +43,14 @@
     <!--Front Page-->
     <div class="main">
       <div class="main__container">
-        <h1>Kshitiiz Aryal</h1>
-        <h5>- Prof. of Artificail intilligence</h5>
+        <h1>Kshitiiz Aryal</h1> 
+        <h5>- Prof. of Artificail intilligence
+          <hr>
+        </h5>
         <p>This need to be changed</p>
       </div>
         <div class="My_image">
-          <img src="../Javscript/image/Dada.jpg"
+          <img src="C:\Users\KSHITIZ\DADA-ko-website\Dada.jpg"
            alt="My image" id="My_img"/>
       </div>
       
