--- a/Dada.HTML
+++ b/Dada.HTML
@@ -44,10 +44,31 @@
     <div class="main">
       <div class="main__container">
         <h1>Kshitiiz Aryal</h1> 
-        <h5>- Prof. of Artificail intilligence
-          <hr>
-        </h5>
-        <p>This need to be changed</p>
+        <h4>- Prof. of Artificail intilligence
+        <hr>
+        <br>
+        Research and Scholarity interests: <br> 
+        Offensiveweb vul, IOT, Machine learning, <br>
+         Artificial Intelligence, Python programming 
+        <hr>
+        <br>
+        Websites: Kshitiz Aryal. com
+        <hr>
+        <br>
+        Contact: Aryalkshitiz@gmail.com, 9868880369
+        <hr>
+        <br>
+        Asistant: Rajiv Aryal-Nepal 
+        <hr>
+        <br>
+        Office location: <br>
+        5640 s. local street <br>
+        something road <br>
+        tenessese USA
+        <hr>
+        <br>
+        </h4>
+         
       </div>
         <div class="My_image">
           <img src="C:\Users\KSHITIZ\DADA-ko-website\Dada.jpg"
