--- a/Dada.HTML
+++ b/Dada.HTML
@@ -1,123 +1,143 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kshitiz Aryal</title>
-  <link rel="stylesheet" href="Styles.CSS" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/release/v5.14.0/CSS/all.CSS"
-    integrity="sha348-HzLeBuhoNPv5l5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbfc" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Kshitiz Aryal</title>
+        <link rel="stylesheet" href="Styles.CSS" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/release/v5.14.0/CSS/all.CSS"
+          integrity="sha348-HzLeBuhoNPv5l5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbfc" crossorigin="anonymous" />
+        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet" />
 
 </head>
 
 <body>
-  <!--Navigation bar-->
-  <nav class="navbar">
-    <div class="navbar__container">
-      <a href="/" id="navbar__logo"> <i class="fas fa-university"></i>Profile</a>
-      <div class="navbar__toggle" id="mobile-menu"></div>
-      <span class="bar"></span> <span class="bar"></span>
-      <span class="bar"></span>
+          <!--Navigation bar-->
+          <nav class="navbar">
+            <div class="navbar__container">
+              
+              <a href="" id="navbar__logo"></i>Profile</a>
+              <div class="navbar__toggle" id="mobile-menu"></div>
+              <span class="bar"></span> <span class="bar"></span>
+              <span class="bar"></span>
 
-    </div>
-    <ul class="navbar__menu">
-      <li>
-        <a href="/" class="navbar__links"> Home</a>
-      </li>
-      <li>
-        <a href=".Project" class="navbar__links">Projects </a>
-      </li>
-      <li>
-        <a href=".Research" class="navbar__links"> Research</a>
-      </li>
-      <li>
-        <a href=".Last-Page" class="navbar__links"> More info</a>
-      </li>
-    </ul>
+            </div>
+            <ul class="navbar__menu">
+              <li>
+                <a href="#about_me"  class="navbar__links"> Home</a>
+              </li>
+              <li>
+                <a href="#my_Project"  class="navbar__links">Projects </a>
+              </li>
+              <li>
+                <a href="#my_Research" class="navbar__links"> Research</a>
+              </li>
+              <li>
+                <a href="#my_Last-Page" class="navbar__links"> More info</a>
+              </li>
+            </ul>
 
-    </div>
-  </nav>
-  <!--Front Page-->
-  <div class="main">
-    <div class="main__container">
-      <div class="My_image">
-        <img src="C:\Users\KSHITIZ\DADA-ko-website\Dada.png" alt="My image" id="My_img" />
-      </div>
-      <div class = "details">
-        <h1>Kshitiiz Aryal</h1>
-        <h4>- Prof. of Artificail intilligence
-          <hr>  
-          <br>
-          Research and Scholarity interests: <br>
-          Offensive web vul, IOT tech, <br>
-          Machine learning,Artificial Intelligence
-          <hr>
-          <br>
-          Websites: Kshitiz Aryal. com
-          <hr>
-          <br>
-          Contact: Aryalkshitiz@gmail.com, 9868880369
-          <hr>
-          <br>
-          Asistant: Rajiv Aryal-Nepal
-          <hr>
-          <br>
-          Office location: <br>
-          5640 s. local street <br>
-          something road <br>
-          tenessese USA
-          <hr>
-          <br>
-        </h4>
-    </div>
-
-    </div>
-<hr>
-
-    <!--Research Section-->
-    <div class="Research">
-      <h1>My Researchs</h1>
-      <div class="Project__container">
-        <div class="Project__card">
-          <h2>Modern Robotics</h2>
-          <div>AI Powered Technology</div>
-        </div>
-        <div class="Project__card">
-          <h2>Internet of things</h2>
-          <p>Offensive Security</p>
-          <div class="main__img--container">
-            <img src="" alt="pic" id="main__img" />
-          </div>
-        </div>
-      </div>
-    </div>
-    <hr>
-    <!--project Section-->
-    <div class="Project">
-      <h1>My Projects</h1>
-      <div class="projects_tiles">
-        <div class="project">Project 1</div>
-        <div class="project">Project 2</div>
-        <div class="project">Project 3</div>
-        <div class="project">Project 4</div>
-        <div class="project">Project 5</div>
-        <div class="project">Project 6</div>
-      </div>
-    </div>
+            </div>
+          </nav>
 
 
-    <!--Personnel Info-->
-    <div class="Last-Page">
-      <h1>Let's get in touch</h1>
-      <p>Everything i will write here</p>
-      <button type="button" class="last_button">Email me!</button>
-    </div>
-    <script src="app.js"></script>
-    <div class="Footer">
-    <blockquote>Copyright belongs to Ary@l broda</blockquote>
-    </div><div>
+            <!--Front Page-->
+            <section id="about_me"> 
+            <div class="main">
+              <div class="main__container">
+                <div class="My_image">
+                  <img src="C:\Users\KSHITIZ\DADA-ko-website\Dada.png" alt="My image" id="My_img" />
+                </div>
+                <div class = "details">
+                  <h1>Kshitiiz Aryal</h1>
+                  <h4>- Prof. of Artificail intilligence
+                    <hr>  
+                    <br>
+                    Research and Scholarity interests: <br>
+                    Offensive web vul, IOT tech, <br>
+                    Machine learning,Artificial Intelligence
+                    <hr>
+                    <br>
+                    Websites: Kshitiz Aryal. com
+                    <hr>
+                    <br>
+                    Contact: Aryalkshitiz@gmail.com, 9868880369
+                    <hr>
+                    <br>
+                    Asistant: Rajiv Aryal-Nepal
+                    <hr>
+                    <br>
+                    Office location: <br>
+                    5640 s. local street <br>
+                    something road <br>
+                    tenessese USA
+                    <hr>
+                    <br>
+                  </h4>
+              </div>
 
-</body>
+              </div>
+              </div>
+              </section>
+          <hr style="height: 2.5rem;px;border-width:0;color:black">
+
+
+              <!--project Section-->
+              <section id="my_Project">
+                  <h1>My Projects</h1>
+                  <div class="projects_tiles">
+                    <div class="project">Project 1</div>
+                    <div class="project">Project 2</div>
+                    <div class="project">Project 3</div>
+                    <div class="project">Project 4</div>
+                    <div class="project">Project 5</div>
+                    <div class="project">Project 6</div>
+                  </div>
+                </div>
+              </section>
+            <hr style="height: 2.5rem;px;border-width:0;color:black">
+
+
+
+              <!--Research Section-->
+              <section id="my_Research">
+              <div class="Research">
+                <h1>My Researchs</h1>
+                <div class="Research__container">
+                  <div class="Research__card">
+                    <P>Machine Learning</p>
+                    <p>Adversarial Attack</p>
+                    <p> Machine Learning</p>
+                    <p>Cyber Security</p>
+                    <p>Evasion Attack</p>
+                    <p>IOT</p>
+                    <p>Embedded Systems</p>
+                    <p>Data Science</p>
+                    
+                    <div class="main__img--container">
+                      <img src="" alt="pic" id="main__img" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </section>
+              <hr style="height: 2.5rem;px;border-width:0;color:black">
+
+
+            <!--Personnel Info-->
+            <section id="my_Last-Page">
+            <div class="Last-Page">
+              <h1>Let's get in touch</h1>
+              <p>Everything i will write here</p>
+              <button type="button" class="last_button">Email me!</button>
+            </div>
+            <script src="app.js"></script>
+            <div class="Footer">
+                <blockquote class="footer_text">© Copying this site would cost you coffee ;)</blockquote>
+            </div>
+            </section>
+
+     </body>
 
 </html>
