--- a/Dada.HTML
+++ b/Dada.HTML
@@ -47,8 +47,16 @@
             <div class="main">
               <div class="main__container">
                 <div class="My_image">
-                  <img src="C:\Users\KSHITIZ\DADA-ko-website\Dada.png" alt="My image" id="My_img" />
+                  <img src="C:\Users\KSHITIZ\DADA-ko-website\Assets\Dada.png" alt="My image" id="My_img" />
                 </div>
+                <!----Social Media---------->
+                   <div class="Social_links">
+                     <a href="#" class="Twitter"><i class="icofont-facebook"></i></a>
+                     <a href="#" class="Facebook"><i class="icofont-twitter"></i></a>
+                     <a href="#" class="Instagram"><i class="icofont-instagram"></i></a>
+                     <a href="#" class="LinkedIn"><i class="icofont-linkedin"></i></a>  
+                   </div>
+
                 <div class = "details">
                   <h1>Kshitiiz Aryal</h1>
                   <h4>- Prof. of Artificail intilligence
@@ -77,6 +85,7 @@
                   </h4>
               </div>
 
+
               </div>
               </div>
               </section>
@@ -96,7 +105,7 @@
                   </div>
                 </div>
               </section>
-            <hr style="height: 2.5rem;px;border-width:0;color:black">
+            <hr style="height: 2.5rem;border-width:0;color:black">
 
 
 
@@ -115,26 +124,27 @@
                     <p>Embedded Systems</p>
                     <p>Data Science</p>
                     
-                    <div class="main__img--container">
-                      <img src="" alt="pic" id="main__img" />
-                    </div>
                   </div>
                 </div>
               </div>
               </section>
-              <hr style="height: 2.5rem;px;border-width:0;color:black">
+              <hr style="height: 2.5rem;border-width:0;color:black">
 
 
             <!--Personnel Info-->
             <section id="my_Last-Page">
             <div class="Last-Page">
-              <h1>Let's get in touch</h1>
+              <h1>More about Me</h1>
               <p>Everything i will write here</p>
-              <button type="button" class="last_button">Email me!</button>
+              <a class="Mail_botton" href="mailto:ksh.aryal2010@gmail.com">Email Me</a>
+
             </div>
             <script src="app.js"></script>
+            
             <div class="Footer">
-                <blockquote class="footer_text">© Copying this site would cost you coffee ;)</blockquote>
+                <footer class="footer_text">
+                  © Copying this site would cost you coffee ;)
+                </footer>
             </div>
             </section>
 
