--- a/Dada.HTML
+++ b/Dada.HTML
@@ -49,13 +49,6 @@
                 <div class="My_image">
                   <img src="C:\Users\KSHITIZ\DADA-ko-website\Assets\Dada.png" alt="My image" id="My_img" />
                 </div>
-                <!----Social Media---------->
-                   <div class="Social_links">
-                     <a href="#" class="Twitter"><i class="icofont-facebook"></i></a>
-                     <a href="#" class="Facebook"><i class="icofont-twitter"></i></a>
-                     <a href="#" class="Instagram"><i class="icofont-instagram"></i></a>
-                     <a href="#" class="LinkedIn"><i class="icofont-linkedin"></i></a>  
-                   </div>
 
                 <div class = "details">
                   <h1>Kshitiiz Aryal</h1>
@@ -151,16 +144,14 @@
               
               <a class="Mail_botton" href="mailto:ksh.aryal2010@gmail.com">Email Me</a>
              </div>
-
             <script src="app.js"></script>
             
-            <div class="Footer">
-                <footer class="footer_text">
+            <footer>
+                <div class="footer_text">
                   © Copying this site would cost you coffee ;)
-                </footer>
-            </div>
+                </div>
+            </footer>
             </section>
-
      </body>
 
 </html>
