--- a/Dada.HTML
+++ b/Dada.HTML
@@ -129,7 +129,7 @@
             <!--Personnel Info-->
             <section id="my_Last-Page">
             <div class="Last-Page">
-              <h1>More about Me</h1>
+              <h1>Contact Me</h1>
               <h3>You can find me on</h3>
 
               <div class="Social_Media">
@@ -140,6 +140,9 @@
                 <i class="fab fa-youtube"></i>
   
               </div>
+              <p>"Tell me and I forget. Teach me and I remember. Involve me and I learn"</p>
+              <h4>- Benjamin Franklin</h4>
+              
               <h2>Ask me anything</h2>
               
               <a class="Mail_botton" href="mailto:ksh.aryal2010@gmail.com">Email Me</a>
