--- a/Dada.HTML
+++ b/Dada.HTML
@@ -133,15 +133,15 @@
               <h3>You can find me on</h3>
 
               <div class="Social_Media">
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-twitter-square"></i>
-                <i class="fab fa-github"></i>
-                <i class="fab fa-youtube"></i>
+                <a href="https://www.facebook.com/kshitiz.aryal.3">><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/kshiti__z/"><i class="fab fa-instagram"></i></a>
+                <a href="/"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://github.com/Zitihskx"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/kshitiz-aryal-2506ba13b/"><i class="fab fa-linkedin"></i></a>
   
               </div>
-              <p>"Tell me and I forget. Teach me and I remember. Involve me and I learn"</p>
-              <h4>- Benjamin Franklin</h4>
+              <p>Donload CV</p>
+              <button>Here</button>
               
               <h2>Ask me anything</h2>
               
